# qml_examples

./: README.md
qml_cpp_integration/: README.MD
qml_cpp_integration/register_Instantiable_object/: CMakeLists.txt  Main.qml  main.cpp  message.cpp  message.h
qmlb-3-1/: CMakeLists.txt  MyButton.qml  main.cpp  main.qml
qmlb-3-2/: CMakeLists.txt  main.cpp  main.qml
qmlb-3-3/: CMakeLists.txt  main.cpp  main.qml
qmlb-3-4/: CMakeLists.txt  main.cpp  main.qml
qmlb-3-5/: CMakeLists.txt  main.cpp  main.qml
qmlb-3-6/: CMakeLists.txt  main.cpp  main.qml
qmlb-4-1/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-2/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-3/: CMakeLists.txt  Main.qml  application.qrc  main.cpp
qmlb-4-4/: CMakeLists.txt  Main.qml  main.cpp
qmlb-4-5/: CMakeLists.txt  Main.qml  MyButton.qml  main.cpp
smart_thermostate/: CMakeLists.txt  Main.qml  app.qrc  controller.cpp  controller.h  main.cpp  qml.qrc
smart_thermostate/Controllers/: controller.cpp  controller.h
smart_thermostate/UI/HomeScreen/: HomeScreen.qml  TempertureControlSlider.qml
smart_thermostate/UI/Home_Screen/: Temperature_Slider.qml  home_screen.qml
tesla_dashboard/: CMakeLists.txt  Main.qml  app.qrc  hvachandler.cpp  hvachandler.h  main.cpp
tesla_dashboard/Controllers/: system.cpp  system.h
tesla_dashboard/ui/ButtomBar/: ButtomBar.qml  HVACComponent.qml  HVACComponent.qrc
tesla_dashboard/ui/LeftScreen/: LeftScreen.qml
tesla_dashboard/ui/RightScreen/: NavigationSearchBox.qml  RightScreen.qml
